Bug 1319919 - Fix vertical spacing, font-size, and colors of the insecure field warning. r=seanlee
MozReview-Commit-ID: LngIqzZPCw9

UltraBlame original commit: ee48bfcb6ded92f5f9fdd10494371dbd56078546

--- a/browser/themes/shared/autocomplete.inc.css
+++ b/browser/themes/shared/autocomplete.inc.css
@@ -297,15 +297,134 @@ background
 -
 color
 :
-#
-F6F6F6
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+)
 ;
-/
-*
-Bug
-1319176
-*
-/
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+panel
+-
+separator
+-
+color
+)
+;
+padding
+-
+bottom
+:
+4px
+;
+padding
+-
+top
+:
+4px
+;
+}
+#
+PopupAutoComplete
+>
+richlistbox
+>
+richlistitem
+[
+originaltype
+=
+"
+insecureWarning
+"
+]
+[
+selected
+]
+{
+background
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+-
+further
+)
+;
+}
+#
+PopupAutoComplete
+>
+richlistbox
+>
+richlistitem
+[
+originaltype
+=
+"
+insecureWarning
+"
+]
+>
+.
+ac
+-
+title
+{
+color
+:
+GrayText
+;
+font
+-
+size
+:
+1em
+;
+}
+#
+PopupAutoComplete
+>
+richlistbox
+>
+richlistitem
+[
+originaltype
+=
+"
+insecureWarning
+"
+]
+[
+selected
+]
+>
+.
+ac
+-
+title
+{
+color
+:
+inherit
+;
 }
 #
 PopupAutoComplete
